# auv_missions

./: .gitignore  CMakeLists.txt  README.md  pipeline_inspection_BT.cpp
docking_bt/: docking.btproj
docking_bt/bts/: docking.xml
docking_bt/nodes/: dock_node.cpp
docking_bt/nodes/include/: detect_marker_node.hpp
non_ros_bts/docking_bt/: docking_bt.cpp
non_ros_bts/docking_bt/nodes/: detect_marker_node.cpp  home_node.cpp
non_ros_bts/docking_bt/nodes/include/: dock_node.hpp  home_node.hpp
non_ros_bts/suave/: pipeline_inspection_mission.xml
suave/: Project.btproj  pipeline_inspection_BT.cpp  pipeline_inspection_groot.xml
suave_bt/: CMakeLists.txt  package.xml
suave_bt/bts/: mock.xml  mock_order.xml  mock_suave.xml  paleet.groot.xml  suave.xml
suave_bt/include/suave_bt/: action_inspect_pipeline.hpp  action_recharge_battery.hpp  action_search_pipeline.hpp  arm_thrusters.hpp  is_enough_battery.hpp  is_pipeline_found.hpp  is_pipeline_inspected.hpp  is_task_feasible.hpp  metacontroled_action.hpp  mock_enough_battery.hpp  mock_inspect_pipeline.hpp  mock_pipeline_found.hpp  mock_pipeline_inspected.hpp  mock_recharge_battery.hpp  mock_search_pipeline.hpp  pipeline_detected_node.hpp  set_guided_mode.hpp
suave_bt/launch/: suave_typedb.launch.py
suave_bt/src/: behavior_tree_engine.cpp  mock_suave.cpp  pipeline_detected_node.cpp
suave_bt/src/suave_bt/: action_inspect_pipeline.cpp  action_recharge_battery.cpp  action_search_pipeline.cpp  arm_thrusters.cpp  is_enough_battery.cpp  is_pipeline_found.cpp  is_pipeline_inspected.cpp  is_task_feasible.cpp  metacontroled_action.cpp  mock_enough_battery.cpp  mock_inspect_pipeline.cpp  mock_pipeline_found.cpp  mock_pipeline_inspected.cpp  mock_recharge_battery.cpp  mock_search_pipeline.cpp  set_guided_mode.cpp
