<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suave_bt</name>
  <version>0.0.0</version>
  <description>Behavior trees for SUAVE</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_action</depend> -->
  <!-- <depend>example_interfaces</depend> -->

  <depend>behaviortree_cpp</depend>
  <depend>rosa_msgs</depend>
  <depend>rosa_plan</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->
  <!-- <depend>action_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
